--- a/music_recommendation_app/templates/recommend_result_page.html
+++ b/music_recommendation_app/templates/recommend_result_page.html
@@ -221,7 +221,6 @@
                 <div class="title">{{ song.title }}</div>
                 <div class="artist">{{ song.artist }}</div>
                 <div class="bpm">BPM: {{ song.bpm }}</div>
-                {# YouTube 링크 관련 내용 완전 제거 #}
               </div>
             </div>
           {% endfor %}
@@ -236,7 +235,7 @@
   </main>
 
   <footer>
-      <p>&copy; 2025 음잘딱깔센 | Powered by <a href="https://getsongbpm.com/" target="_blank">getsongbpm.com</a></p>
+      <p>&copy; 2025 음잘딱깔센 | Powered by <a href="https://api.getsong.co/" target="_blank">getsong.co</a></p>
   </footer>
 
   <script>
