--- a/music_recommendation_app/templates/index.html
+++ b/music_recommendation_app/templates/index.html
@@ -218,7 +218,7 @@
   </div>
 
   <footer>
-      <p>&copy; 2025 음잘딱깔센 | Powered by <a href="https://getsongbpm.com/" target="_blank">getsongbpm.com</a></p>
+      <p>&copy; 2025 음잘딱깔센 | Powered by <a href="https://api.getsong.co/" target="_blank">getsong.co</a></p>
   </footer>
 
   <script>
